--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             </div>
         </div>
 
-        <script src="./scripts.js"></script>
+        <script src="./scripts/scripts.js"></script>
     </body>
 
 </html>
